--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
